welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
  var T = new.Array[Int](num+1)
  T(1) = 1
  T(2) = 2
  T(num) = 0
  var p = 2
  var c = 2
  while (T(num)==0) {
    remplir(T, p, T(p))
  }
}

def remplir(T:Array[Int], x:Int, n:Int) = { //ajoute au tableau T l'élément x n fois
  var p = 0
  while ((p) != 0) {
    p = p + 1
  }
  for (i <- 0 to n-2) {
    if ((p+i)<T.length) {T(p+i) = x}
  }
}